# Mental_Health_Project_ML2

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: exploration.ipynb
presentation.key/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
src/: load_data.py  model.py  preprocessing.py
